--- a/functions/package.json
+++ b/functions/package.json
@@ -17,7 +17,8 @@
   "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"w
+    "firebase-functions": "^6.0.1",
+    "n": "^10.1.0"
   },
   "devDependencies": {
     "@types/chai": "^5.2.2",
@@ -31,7 +32,7 @@
     "firebase-functions-test": "^3.1.0",
     "mocha": "^11.2.2",
     "ts-node": "^10.9.2",
-    "typescript": "^4.9.0"
+    "typescript": "^5.8.3"
   },
   "private": true
 }
